<resources>
    <string name="app_name">Note Application</string>
    <string name="txt_notes">Notes</string>
    <string name="txt_input_title">Input title</string>
    <string name="txt_no_title">[No title]</string>
    <string name="txt_please_input_here">Please input here</string>
    <string name="txt_search_keyword">Search keyword</string>
    <string name="txt_create_label">Create new label</string>
    <string name="txt_create_block_quote">Create \"%1$s\"</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txt_search">Search</string>
    <string name="txt_thanhtho_s_note_application">Thanhtho\'s Note Application</string>
    <string name="txt_email">tt.thanh.vu@tomosia.com</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_privacy">Privacy</string>
    <string name="txt_edit_labels">Edit labels</string>
    <string name="txt_please_input_label_name">Please input label name</string>
    <string name="txt_please_confirm_pattern">Please draw again to confirm pattern</string>
    <string name="txt_please_draw_pattern">Please draw a pattern</string>
    <string name="txt_please_draw_unlock_pattern">Please draw unlocked Pattern</string>
    <string name="txt_lock">Lock</string>
    <string name="txt_unlock">Unlock</string>
    <string name="txt_want_to_delete_label">Do you want to delete this label?</string>
    <string name="txt_want_to_delete_note">Do you want to delete this note?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_set_notification">Set notification</string>
    <string name="txt_alarm_must_later_now">You must set notification later than now</string>
    <string name="txt_set_notification_successfully">You have set notification successfully</string>
    <string name="note_notification_channel_id">NOTE_NOTIFICATION</string>
    <string name="note_notification_channel_name">Fire notification of note</string>
    <string name="note_notification_channel_description">Note Notification</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_attachment">Attachment</string>
    <string name="txt_take_a_picture">Take a picture</string>
    <string name="txt_select_from_storage">Select from storage</string>
    <string name="txt_select_image">Please select an image</string>
    <string name="txt_need_read_permission">You need grant read permission to insert image</string>
    <string name="txt_grant_permission">Grant it</string>
    <string name="txt_read_permission_unavailable">Read permission is unavailable</string>
    <string name="txt_notification">Notification</string>
    <string name="txt_want_to_delete_alarm">Do you want to delete this alarm?</string>
    <string name="txt_theme">Theme</string>
    <string name="txt_light">Light</string>
    <string name="txt_dark">Dark</string>
    <string name="txt_system_default">System default</string>
    <string name="txt_editor_font_size">Editor font size</string>
    <string name="txt_small">Small</string>
    <string name="txt_normal">Normal</string>
    <string name="txt_large">Large</string>
    <string name="txt_backup">Backup</string>
    <string name="txt_backup_current_notes">Backup current notes</string>
</resources>