<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_17sdp"
    tools:context=".ui.ChooseFontSizeDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_7sdp"
        android:text="@string/txt_editor_font_size"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/text_size_large" />

    <RadioGroup
        android:id="@+id/radioGroupFontSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_7sdp"
            android:text="@string/txt_small"
            android:textSize="@dimen/text_size_normal" />

        <RadioButton
            android:id="@+id/radioButtonNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_7sdp"
            android:text="@string/txt_normal"
            android:textSize="@dimen/text_size_normal" />

        <RadioButton
            android:id="@+id/radioButtonLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_7sdp"
            android:text="@string/txt_large"
            android:textSize="@dimen/text_size_normal" />
    </RadioGroup>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/txt_cancel"
        android:textColor="@color/red" />
</LinearLayout>